<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
            android:id="@+id/drawer_find"
            android:icon="@drawable/ic_action_find"
            android:title="@string/find_novel"/>
    <item
            android:id="@+id/drawer_read"
            android:icon="@drawable/ic_action_file_download"
            android:title="@string/read_novel"/>
    <item
            android:id="@+id/drawer_bookmark"
            android:icon="@drawable/ic_action_bookmark"
            android:title="@string/bookmark"/>
    <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/settings"/>
    <item
            android:id="@+id/drawer_browser"
            android:icon="@drawable/ic_action_open_in_browser"
            android:title="@string/open_in_browser"/>
</menu>
